create endpoint get user profile, swagger, and fix auth
