# src/swagger/swagger.yaml
@@ -6,13 +6,15 @@ info:
   contact:
     name: Jack
 servers:
-  - url: https://i004-reffindr-back-dotnet-dev.onrender.com/api
+  - url: https://i004-reffindr-back-nodejs-dev.onrender.com/
     description: Render Server
 tags:
-  - name: Users
-    description: Endpoints for user management
+  - name: Auth
+    description: Endpoints for auth management
   - name: Properties
     description: Endpoints for property management
+  - name: Users
+    description: Endpoints for user management
 components:
   securitySchemes:
     bearerAuth:
@@ -20,6 +22,31 @@ components:
       scheme: bearer
       bearerFormat: JWT
   schemas:
+    User:
+      type: object
+      properties:
+        roleId:
+          type: number
+        countryId:
+          type: number
+        stateId:
+          type: number
+        name:
+          type: string
+        lastName:
+          type: string
+        dni:
+          type: string
+        phone:
+          type: string
+        address:
+          type: string
+        birthDate:
+          type: string
+        email:
+          type: string
+        isProfileComplete:
+          type: boolean
     UserRegister:
       type: object
       required:
@@ -202,7 +229,7 @@ paths:
   /auth/register:
     post:
       summary: Register a new user
-      tags: [Users]
+      tags: [Auth]
       requestBody:
         required: true
         content:
@@ -224,7 +251,7 @@ paths:
   /auth/login:
     post:
       summary: Login a user
-      tags: [Users]
+      tags: [Auth]
       requestBody:
         required: true
         content:
@@ -252,6 +279,7 @@ paths:
                     type: boolean
                   statusCode:
                     type: number
+
   /properties/create-property:
     post:
       security:
@@ -364,3 +392,17 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Property'
+
+  /users/profile:
+    get:
+      security:
+        - bearerAuth: []
+      summary: Get User Profile
+      tags: [Users]
+      responses:
+        200:
+          description: User profile
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
